--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --host 192.168.1.2"
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
